Enhance SEO and social sharing with meta tags, favicons, and Open Graph integration

--- a/portfolio-single-2.html
+++ b/portfolio-single-2.html
@@ -2,6 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
+        <!-- Primary Meta Tags -->
+        <title>Minimalfolio — Clean Responsive Developer Portfolio</title>
+        <meta name="title" content="Minimalfolio — Clean Responsive Developer Portfolio">
+        <meta name="description" content="Minimalfolio is a modern and responsive portfolio app to showcase developer projects, skills, contact info, and testimonials using HTML, Bootstrap, SCSS, and jQuery.">
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -9,8 +13,25 @@
         <meta name="author" content="Ahmed Maher Algohary" />
         <link rel="shortcut icon" href="favicon.png" />
 
-        <meta name="description" content="" />
-        <meta name="keywords" content="" />
+        <!-- Favicon -->
+        <link rel="icon" href="./favicon.png" type="image/x-icon" />
+
+        <!-- Keywords -->
+        <meta name="keywords" content="portfolio, developer, personal website, responsive portfolio, frontend developer, bootstrap, jquery, HTML5, SCSS, fancybox, AOS, owl carousel">
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://ahmed-maher77.github.io/Minimalfolio__Personal-Portfolio-Website/">
+        <meta property="og:title" content="Minimalfolio — Clean Responsive Developer Portfolio">
+        <meta property="og:description" content="A minimal, clean, and interactive portfolio template for showcasing your development work.">
+        <meta property="og:image" content="./favicon.png">
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:url" content="https://ahmed-maher77.github.io/Minimalfolio__Personal-Portfolio-Website/">
+        <meta property="twitter:title" content="Minimalfolio — Clean Responsive Developer Portfolio">
+        <meta property="twitter:description" content="Showcase your development projects with Minimalfolio – modern, responsive, and developer-friendly.">
+        <meta property="twitter:image" content="./favicon.png">
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -27,8 +48,6 @@
         <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css" />
         <link rel="stylesheet" href="css/aos.css" />
         <link rel="stylesheet" href="css/style.css" />
-
-        <title>Task Management App - Ahmed Maher Algohary</title>
     </head>
 
     <body data-spy="scroll" data-target=".site-navbar-target" data-offset="100">
